# PyPremise

./: README.md  pyproject.toml
documentation/: LLM_outputs_examples.ipynb  general_example.ipynb  missclassification_examples.ipynb  other-platforms.md  word_embedding_examples.ipynb
src/pypremise/: core.py  data_loaders.py
